# vividoc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  raw.md
.kiro/specs/html-executor-migration/: design.md  requirements.md  tasks.md
.kiro/specs/vividoc-system/: design.md  requirements.md  tasks.md
.kiro/specs/vividoc-web-ui/: design.md  requirements.md  tasks.md
backend/: __init__.py  main.py
backend/api/: __init__.py  routes.py
backend/models/: api_models.py
backend/services/: document_service.py  spec_service.py
datasets/prepped/: dead_links.csv  explorable.csv  non_explorable.csv  prepped.csv  topics.jsonl
datasets/raw/: raw.csv  raw.json
docs/: method.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  index.ts  services.ts
frontend/src/components/: CenterPanel.tsx  ConfigModal.tsx  DocumentViewer.tsx  KUProgressCard.tsx  LeftSidebar.tsx  ProgressBar.tsx  ProgressMonitor.tsx  RightPanel.tsx  SpecEditor.tsx  TopicInput.tsx  index.ts
prompts/: evaluator_prompt.py  executor_prompt.py  planner_prompt.py  prompt_planner.py
prompts/prep/: prompt_extract_topic.py  promtp_website_category.py
scripts/: planner_agent.py  prompt_planner.py
tests/: test_api_routes.py  test_backend_setup.py  test_config.py  test_document_service.py  test_executor_with_progress.py  test_job_manager_threading.py  test_llm_calling.py  test_spec_service.py
vividoc/: cli.py  evaluator.py  executor.py  models.py  planner.py  runner.py
vividoc/core/: __init__.py  config.py  evaluator.py  executor.py  models.py  planner.py  runner.py
vividoc/entrypoint/: __init__.py  web_server.py
vividoc/prep/: split_dataset.py  topic_extraction.py  website_filter.py
vividoc/utils/: io.py  logger.py
(+14 files in other folders)
