[project]
name = "vividoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "flask>=3.1.2",
    "google-genai>=1.53.0",
    "openai>=2.9.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "tqdm>=4.66.0",
    "typer>=0.20.0",
    "uvicorn>=0.32.0",
]


[tool.setuptools]
packages = ["vividoc", "prompts", "backend"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "commitizen>=4.12.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[project.scripts]
vividoc = "vividoc.cli:main"
